<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/notifications">

        <SwitchPreferenceCompat
            android:key="daily_notification"
            android:summaryOff="@string/daily_notification_off"
            android:summaryOn="@string/daily_notification_on"
            android:title="@string/daily_notification" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/general_preferences">

        <SwitchPreferenceCompat
            android:key="date_format_preference"
            android:summaryOff="@string/date_abbreviated_preference"
            android:summaryOn="@string/date_expanded_preference"
            android:title="@string/date_format_preference" />

    </PreferenceCategory>

</PreferenceScreen>